src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>SKU_Gl_Group__c</fullName>
        <label>SKU GL Group</label>
        <picklist>
            <picklistValues>
                <fullName>12110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22035</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22050</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22070</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22090</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40095</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>64500</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SKU_Group_Code__c</fullName>
        <label>SKU Group Code</label>
        <picklist>
            <picklistValues>
                <fullName>ADDONX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLNCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H-INSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLBRX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBTX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRVX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAINX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UMX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SKU_ID__c</fullName>
        <externalId>true</externalId>
        <label>SKU ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SKU_Internal_Description__c</fullName>
        <label>SKU Internal Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SKU_Name__c</fullName>
        <label>SKU Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Product_Line_Id__c</fullName>
        <label>SKU Product Line Id</label>
        <picklist>
            <picklistValues>
                <fullName>BCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UMX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SKU_Tax__c</fullName>
        <label>SKU Tax</label>
        <picklist>
            <picklistValues>
                <fullName>SC100202</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC100102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-manitoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC070101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW052000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC010500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR070000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC100101</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SKU_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SKU Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SaaS_Documentation_URL__c</fullName>
        <label>SaaS Documentation URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaaS_My_Cases_URL__c</fullName>
        <label>SaaS My Cases URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sku_Sub_Type__c</fullName>
        <label>SKU Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perpetual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holdback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Share - Mitchell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services - Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Sharing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sku_Type__c</fullName>
        <label>SKU Type</label>
        <picklist>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive in Intacct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive in Salesforce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Group__c</fullName>
        <label>Support Group</label>
        <picklist>
            <picklistValues>
                <fullName>PolicyCenter Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataManagement Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter Group</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Users__c</fullName>
        <label>Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__IsServicesProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsServicesProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sku_Deployment_Type__c</fullName>
        <label>SKU Deployment Type</label>
        <picklist>
            <controllingField>Sku_Type__c</controllingField>
            <picklistValues>
                <fullName>On-Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SaaS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>IF(ISBLANK( CPQ_Price_Minimum_1__c ), &apos;blank1&apos;, &apos;n1&apos;) &amp; &apos; + &apos; &amp; IF(ISBLANK( CPQ_Price_Minimum_2__c ), &apos;blank2&apos;, &apos;n2&apos;)</formula>
        <label>test</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>Product_Integration_Status__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Sku_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>SBQQ__Component__c</columns>
        <columns>DWP_in_M__c</columns>
        <columns>DWP_in_M_Less_Than__c</columns>
        <columns>Users__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>Sta</value>
        </filters>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Entitled_Product</fullName>
        <active>true</active>
        <description>Entitled Product</description>
        <label>Entitled Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>GW_Live_Products</fullName>
        <active>true</active>
        <label>GW Live Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRM_Partner_Products</fullName>
        <active>true</active>
        <description>Use for Partner Products</description>
        <label>Partner Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sku</fullName>
        <active>true</active>
        <label>Sku</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Products</fullName>
        <active>true</active>
        <label>Standard Products</label>
    </recordTypes>
    <validationRules>
        <fullName>SBQQ__Include_or_Exclude_Maintenance</fullName>
        <active>true</active>
        <description>Validates that either Includes In Maintenance or Excludes From Maintenance checkbox is checked but not both.</description>
        <errorConditionFormula>AND(SBQQ__IncludeInMaintenance__c,SBQQ__ExcludeFromMaintenance__c)</errorConditionFormula>
        <errorMessage>You must check either Include In Maintenance or Exclude From Maintenance checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Subscription_Conversion_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(SBQQ__SubscriptionConversion__c, &apos;One per subscribed asset&apos;) &amp;&amp; NOT(ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;Percent Of Total&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__SubscriptionConversion__c</errorDisplayField>
        <errorMessage>You can only select One per Subscribed Asset for Subscription Conversion for Percent of Total Subscriptions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Term_schedule_requires_subscription</fullName>
        <active>true</active>
        <description>Ensures only subscription products have Term Discount Schedule field populated.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;&apos;),NOT(ISBLANK(SBQQ__TermDiscountSchedule__c)))</errorConditionFormula>
        <errorDisplayField>SBQQ__TermDiscountSchedule__c</errorDisplayField>
        <errorMessage>Only subscription products may specify term discount schedule</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is selected as One-Time, Billing Frequency must not be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR( 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))), 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sku_Id_required_for_Sku_page_layout</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name =&apos;Sku&apos;, ISNULL( SKU_ID__c) )</errorConditionFormula>
        <errorDisplayField>SKU_ID__c</errorDisplayField>
        <errorMessage>Sku Id is required.</errorMessage>
    </validationRules>
</CustomObject>